fix: stabilize auth flow, overhaul mixed categories, fix carousel scroll and finalize deployment config